spacing fixes

--- a/stories/featuredCard.css
+++ b/stories/featuredCard.css
@@ -22,7 +22,7 @@
 
 .featured-card__svg {
   position: relative;
-  top: 3px;
+  top: 5px;
 }
 
 .featured-card__headline {
